--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "react": "^16.3.1",
-    "react-dom": "^16.3.1",
+    "leaflet": "^1.3.1",
+    "prop-types": "^15.6.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-geolocated": "^2.3.0",
+    "react-leaflet": "^1.9.1",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "react-table": "^6.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
