--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "react-leaflet": "^1.9.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
-    "react-table": "^6.8.0"
+    "react-slick": "^0.23.1",
+    "react-table": "^6.8.0",
+    "slick-carousel": "^1.8.1",
+    "surge": "^0.20.1"
   },
   "scripts": {
     "start": "react-scripts start",
