--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "cors": "^2.8.4",
     "leaflet": "^1.3.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
